refactor(backend): 3차 점검 위반 일괄 수정 — wildcard import·String.format·final·dead code 정리